force-app/main/default/objects/Roll_and_Responsibilities__c/Roll_and_Responsibilities__c.object-meta.xml
<CustomObject>
    <label>Roll and Responsibilities</label>
    <nameField>
        <label>Roll and Responsibilitie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roll and Responsibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>