force-app/main/default/objects/Roll_and_Responsibilities__c/fields/Candidate_Profile__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Profile__c</fullName>
    <label>Candidate Profile</label>
    <referenceTo>Candidate_Profile__c</referenceTo>
    <relationshipLabel>Roll and Responsibilities</relationshipLabel>
    <relationshipName>Roll_and_Responsibilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>