force-app/main/default/objects/Roll_and_Responsibilities__c/fields/Rolls_and_Responsibilities_Master__c.field-meta.xml
<CustomField>
    <fullName>Rolls_and_Responsibilities_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rolls and Responsibilities Master</label>
    <referenceTo>Rolls_and_Responsibilities_Master__c</referenceTo>
    <relationshipLabel>Roll and Responsibilities</relationshipLabel>
    <relationshipName>Roll_and_Responsibilities</relationshipName>
    <type>Lookup</type>
</CustomField>