force-app/main/default/objects/Roll_and_Responsibilities__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Responsibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>